[package]
name = "lune-roblox"
version = "0.3.3"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Roblox library for Lune"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = ["mlua"]
mlua = ["dep:mlua", "dep:lune-utils"]

[dependencies]
mlua = { version = "0.11.4", optional = true, features = ["luau"] }

glam = "0.30"
rand = "0.9"
thiserror = "2.0"

rbx_binary = "2.0"
rbx_dom_weak = "4.0"
rbx_reflection = "6.0"
rbx_reflection_database = "2.0"
rbx_xml = "2.0"

lune-utils = { version = "0.3.3", optional = true, path = "../lune-utils" }
