[package]
name = "lune-roblox"
version = "0.3.4"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Roblox library for Lune"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = ["mlua"]
mlua = ["dep:mlua", "dep:lune-utils"]

[dependencies]
mlua = { version = "0.11.6", optional = true, features = ["luau"] }

glam = "0.33"
rand = "0.10"
thiserror = "2.0"

rbx_binary = "3.0"
rbx_dom_weak = "4.0"
rbx_reflection = "7.0"
rbx_reflection_database = "3.0"
rbx_xml = "3.0"

lune-utils = { version = "0.3.4", optional = true, path = "../lune-utils" }
