[package]
name = "lune-std-datetime"
version = "0.3.1"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - DateTime"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.0", features = ["luau"] }

thiserror = "2.0"
chrono = "0.4.38"
chrono_lc = "0.1.6"

lune-utils = { version = "0.3.1", path = "../lune-utils" }
