[package]
name = "lune-std-luau"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - Luau"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.0", features = ["luau", "luau-jit"] }

lune-utils = { version = "0.3.0", path = "../lune-utils" }
