[package]
name = "lune-std-luau"
version = "0.3.3"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - Luau"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.4", features = ["luau", "luau-jit"] }

lune-utils = { version = "0.3.3", path = "../lune-utils" }
