[package]
name = "lune-std-net"
version = "0.3.2"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - Net"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.3", features = ["luau"] }
mlua-luau-scheduler = { version = "0.2.2", path = "../mlua-luau-scheduler" }

async-channel = "2.3"
async-executor = "1.13"
async-io = "2.4"
async-lock = "3.4"
async-net = "2.0"
async-tungstenite = "0.31"
blocking = "1.6"
bstr = "1.9"
form_urlencoded = "1.2"
futures = { version = "0.3", default-features = false, features = ["std"] }
futures-lite = "2.6"
futures-rustls = "0.26"
http-body-util = "0.1"
hyper = { version = "1.6", default-features = false, features = ["http1", "client", "server"] }
pin-project-lite = "0.2"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pki-types = "1.11"
url = "2.5"
urlencoding = "2.1"
webpki = "0.22"
webpki-roots = "1.0"

lune-utils = { version = "0.3.2", path = "../lune-utils" }
lune-std-serde = { version = "0.3.2", path = "../lune-std-serde" }
