[package]
name = "lune-std-regex"
version = "0.3.2"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - RegEx"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.4", features = ["luau"] }

regex = "1.10"
self_cell = "1.0"

lune-utils = { version = "0.3.2", path = "../lune-utils" }
