[package]
name = "lune-std-roblox"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - Roblox"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.9.7", features = ["luau"] }
mlua-luau-scheduler = { version = "0.0.2", path = "../mlua-luau-scheduler" }

once_cell = "1.17"
rbx_cookie = { version = "0.1.4", default-features = false }

lune-utils = { version = "0.1.2", path = "../lune-utils" }
lune-roblox = { version = "0.1.2", path = "../lune-roblox" }
