[package]
name = "lune-std-serde"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - Serde"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.9.7", features = ["luau", "serialize"] }

async-compression = { version = "0.4", features = [
    "tokio",
    "brotli",
    "deflate",
    "gzip",
    "zlib",
    "zstd",
] }
bstr = "1.9"
lz4 = "1.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = { version = "0.8", features = ["preserve_order"] }

tokio = { version = "1", default-features = false, features = [
    "rt",
    "io-util",
] }

lune-utils = { version = "0.1.0", path = "../lune-utils" }
