[package]
name = "lune-std-stdio"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - Stdio"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.10.3", features = ["luau", "error-send"] }
mlua-luau-scheduler = { version = "0.0.2", path = "../mlua-luau-scheduler" }

async-io = "2.4"
blocking = "1.6"
dialoguer = "0.11"
futures-lite = "2.6"

lune-utils = { version = "0.1.3", path = "../lune-utils" }
