[package]
name = "lune-std-stdio"
version = "0.3.3"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - Stdio"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.4", features = ["luau", "error-send"] }
mlua-luau-scheduler = { version = "0.2.3", path = "../mlua-luau-scheduler" }

async-io = "2.4"
async-lock = "3.4"
blocking = "1.6"
dialoguer = "0.12"
futures-lite = "2.6"

lune-utils = { version = "0.3.3", path = "../lune-utils" }
