[package]
name = "lune-std-task"
version = "0.3.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - Task"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.0", features = ["luau"] }
mlua-luau-scheduler = { version = "0.2.0", path = "../mlua-luau-scheduler" }

async-io = "2.4"
futures-lite = "2.6"

lune-utils = { version = "0.3.0", path = "../lune-utils" }
