[package]
name = "lune-utils"
version = "0.1.3"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Utilities library for Lune"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.9.9", features = ["luau", "async"] }

tokio = { version = "1", default-features = false, features = ["fs"] }

console = "0.15"
dunce = "1.0"
once_cell = "1.17"
path-clean = "1.0"
pathdiff = "0.2"
